<?xml version="1.0" encoding="utf-8"?>

<!-- The following is a layout file for a single item in a RecyclerView.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/movie_name_txt"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name_item" />

    <Button
        android:id="@+id/update_movie_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_movie" />

    <Button
        android:id="@+id/delete_movie_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_movie" />

</LinearLayout>