<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieAdditionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="136dp"
        android:layout_height="31dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="10dp"
        android:text="@string/movie_name"
        app:layout_constraintBottom_toTopOf="@+id/new_movie_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_movie_txt"
        android:layout_width="303dp"
        android:layout_height="55dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/movie_name_item"
        app:layout_constraintBottom_toTopOf="@+id/show_movies_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/show_movies_btn"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="330dp"
        android:text="@string/show_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save_movie_btn"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="330dp"
        android:text="@string/save_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/show_movies_btn"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>